# Night-Forest

./: .gitignore  CMakeLists.txt  README.md
models/: low-poly.mtl
models/textures/: firefly_sprite.ppm
src/: ObjLoader.cpp  Window.cpp  Window.h  firefly.cpp  firefly.h  main.cpp  main.h  mesh.cpp  mesh.h  objLoader.h  texture.cpp  texture.h  vertex.h
src/TileMap/: PerlinNoise.cpp  TileMap.cpp  TileMap.h
src/WorldGen/: foliageSystem.cpp  foliageSystem.h  perlinNoise.cpp  perlinNoise.hpp  tileMap.cpp  tileMap.h
src/camera/: Camera.cpp  Camera.h  EulerAngle.cpp  EulerAngle.h
src/shaders/: Shader.cpp  Shader.h  firefly.frag  firefly.vert  shrub.frag  shrub.vert  sky.frag  sky.vert  terrain.frag  terrain.vert  tree.frag  tree.vert  triangle.frag
